# Harbor

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  QUICKSTART.md  README.md  package.json
.github/workflows/: deploy-pages.yml
bridge-rs/: Cargo.toml  install.sh
bridge-rs/native-messaging/: harbor_bridge.json.template
bridge-rs/src/: http_server.rs  main.rs  native_messaging.rs
bridge-rs/src/js/: mod.rs  runtime.rs  sandbox.rs
bridge-rs/src/llm/: config.rs  mod.rs
bridge-rs/src/mcp/: mod.rs
bridge-rs/src/rpc/: mod.rs
bridge-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bridge-ts/scripts/: install_native_manifest_linux.sh  (+13 more)
config/: oauth.env.example
demo/: README.md  index.html  package-lock.json  package.json
docs/: BUILDING_ON_WEB_AGENTS_API.md  DEVELOPER_GUIDE.md  HARBOR_WEB_API_EXPLAINER.md  JS_AI_PROVIDER_API.md  JS_AI_PROVIDER_API_COMPACT.md  JS_MCP_SERVER_SPEC.md  LLMS.txt  MCP_BROWSER_CAPTURE_DESIGN.md  MCP_HOST.md  NON_OAUTH_SECRETS_AND_LOGIN_PLAN.md  OAUTH_GUIDE.md  QUICKSTART_CHROME.md  QUICKSTART_FIREFOX.md  QUICKSTART_SAFARI.md  README.md  TESTING_BROWSER_CAPTURE.md  TESTING_PLAN.md  TESTING_YOUR_APP.md  THIRD_PARTY_TESTING_PLAN.md  USER_GUIDE.md  WEB_AGENTS_API.md  plugin-protocol.md  plugins-dev.md  plugins-quickstart.md
extension/: build.mjs  manifest.chrome.json  manifest.json  manifest.safari.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
installer/: README.md  credentials.env.example
shared/: protocol.ts
spec/: README.md  explainer.md
tests/: README.md
web-agents-api/: build.mjs  manifest.safari.json  package-lock.json  package.json
whitepaper/: PROMPT_FOR_EXTERNAL_MOZILLA_INTELLIGENCE.md  README.md  _config.yml  feedback.md  index.md  values.md
(+269 files in other folders)
