[package]
name = "harbor-bridge"
version = "0.1.0"
edition = "2021"
description = "Native messaging bridge for Harbor browser extension"
authors = ["Raffi Krikorian <raffi.krikorian@gmail.com>"]
license = "MIT"
repository = "https://github.com/r/harbor"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
futures = "0.3"
dirs = "6"
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"
lazy_static = "1.4"

# QuickJS JavaScript engine
rquickjs = { version = "0.6", features = ["bindgen", "loader", "parallel"] }

# Local LLM provider library
any-llm = { path = "any-llm-rust" }

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
